--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,4 @@
-1. Ключи перехватить
+1. Отправка по Enter
+2. Реализовать для 3 и более клиентов
+3. Понять, почему по localhost теперь не работает отправка сбщ и no found favicon.ico
+ 
